Use tricks that look reasonable to workaround several layout bugs in Chrome. 🌝

--- a/assets/css/bar-ui.less
+++ b/assets/css/bar-ui.less
@@ -70,6 +70,12 @@
     overflow: visible;
   }
 
+  input[type=range]::-webkit-slider-runnable-track {
+    background: transparent;
+    border: transparent;
+    width: 100%;
+  }
+
   input[type=range] {
     width: 100%;
     -webkit-appearance: none;
@@ -82,6 +88,7 @@
     background-image: none, none; /* modern browsers */
     color: transparent;
     overflow: visible;
+    float: left;
   }
 
   input[type=range]::-ms-tooltip {
@@ -89,26 +96,26 @@
   }
 
   input[type=range]::-webkit-slider-thumb {
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
+    width: 8px;
+    height: 8px;
+    border-radius: 100%;
     border: 0 none;
     background: #3D3D3D;
     -webkit-appearance: none;
   }
 
   input[type=range]::-ms-thumb {
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
+    width: 8px;
+    height: 8px;
+    border-radius: 100%;
     border: 0 none;
     background: #3D3D3D;
   }
 
   input[type=range]::-moz-range-thumb {
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
+    width: 8px;
+    height: 8px;
+    border-radius: 100%;
     border: 0 none;
     background: #3D3D3D;
   }
@@ -454,8 +461,6 @@
 
 .sm2-inline-time,
 .sm2-inline-duration {
-  display: table-cell;
-  width: 1%;
   font-size: 75%;
   line-height: 0.9em;
   min-width: 2em; /* if you have sounds > 10:00 in length, make this bigger. */
@@ -512,9 +517,32 @@
   display: table-row;
 }
 
-.sm2-progress-bd {
-  /* spacing between progress track/ball and time (position) */
-  padding: 0 0.8em;
+.sm2-progress-container {
+  &:before {
+    content: "";
+    display: inline-block;
+    vertical-align: middle;
+    height: 100%;
+  }
+
+  height: 0.75em;
+  overflow: hidden;
+}
+
+.sm2-progress-element {
+  display: inline-block;
+  vertical-align: middle;
+  margin-bottom: 2px;
+  float: left;
+}
+
+.sm2-progressbar-container {
+  width: 80%;
+  margin-left: 5px;
+}
+
+.sm2-inline-duration {
+  margin-left: 5px;
 }
 
 .sm2-progress .sm2-progress-track,
